# Digital-Hoarding-Detector

./: README.md  app.py  pyproject.toml  requirements.txt
src/digital_hoarding_detector/: __init__.py  blur.py  duplicate.py  gallery.py  screenshot.py  selfie.py
tests/: test_blur.py  test_duplicate.py  test_gallery.py  test_screenshot.py  test_selfie.py
