[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "digital-hoarding-detector"
version = "0.1.0"
description = "Computer-vision tools for identifying clutter in image galleries."
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0,<3.0",
    "opencv-python-headless>=4.10,<5.0",
    "streamlit>=1.45,<2.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0,<9.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
